<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mediumaquamarine"
    android:id="@+id/camera_fragment">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/select_picture"
        android:layout_width="110dp"
        android:layout_height="55dp"
        android:layout_marginBottom="68dp"
        android:text="@string/select_picture"
        android:textColor="@color/black"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:cornerRadius="20dp"
        app:backgroundTint="@color/skyblue"
        style="@style/Widget.MaterialComponents.Button"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/create_image_panel"
        android:layout_width="110dp"
        android:layout_height="55dp"
        android:text="@string/create_image_panel"
        android:textColor="@color/black"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
        app:layout_constraintBottom_toTopOf="@+id/select_picture"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:cornerRadius="20dp"
        app:backgroundTint="@color/skyblue"
        style="@style/Widget.MaterialComponents.Button"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/create_image_bin"
        android:layout_width="110dp"
        android:layout_height="55dp"
        android:text="@string/create_image_bin"
        android:textColor="@color/black"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toTopOf="@+id/select_picture"
        app:layout_constraintRight_toLeftOf="@id/create_image_panel"
        app:cornerRadius="20dp"
        app:backgroundTint="@color/skyblue"
        style="@style/Widget.MaterialComponents.Button"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/create_image_invert"
        android:layout_width="110dp"
        android:layout_height="55dp"
        android:text="@string/create_image_invert"
        android:textColor="@color/black"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
        android:layout_marginStart="10dp"
        app:layout_constraintBottom_toTopOf="@+id/select_picture"
        app:layout_constraintLeft_toRightOf="@id/create_image_panel"
        app:cornerRadius="20dp"
        app:backgroundTint="@color/skyblue"
        style="@style/Widget.MaterialComponents.Button"
        />

    <ImageView
        android:id="@+id/photo_display"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:scaleType="fitCenter"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/create_image_panel"
        />
</androidx.constraintlayout.widget.ConstraintLayout>