<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/select_method"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whitesmoke">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/todo_cancel_button"
            android:textColor="@color/skyblue"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="?android:attr/borderlessButtonStyle"
            />
        <TextView
            android:id="@+id/title_select_method"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/select_picture"
            android:textSize="20sp"
            android:textColor="@color/gray"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            style="?android:attr/borderlessButtonStyle"
            >
        </TextView>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/camera_method"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:text="@string/camera_method"
        android:textColor="@color/gray"
        android:gravity="left|center"
        app:layout_constraintTop_toTopOf="parent"
        app:backgroundTint="@color/white"
        app:icon="@drawable/ic_baseline_photo_camera_24"
        app:iconTint="@color/darkgray"
        app:iconSize="45dp"
        app:iconGravity="start"
        >
    </com.google.android.material.button.MaterialButton>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/album_method"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:text="@string/album_method"
        android:textColor="@color/gray"
        android:gravity="left|center"
        app:backgroundTint="@color/white"
        app:icon="@drawable/ic_baseline_photo_library_24"
        app:iconTint="@color/darkgray"
        app:iconSize="45dp"
        app:iconGravity="start"
        >
    </com.google.android.material.button.MaterialButton>

</LinearLayout>
<!--         <ImageView
                android:id="@+id/photo_icon"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="8dp"
                app:srcCompat="@mipmap/ic_launcher_photo" />
            <TextView
                android:id="@+id/photo_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="8dp"
                android:textSize="20sp"
                android:text="@string/camera_method"
                android:gravity="left|center"
                >
            </TextView>
-->